--- a/client/src/components/PostComments.css
+++ b/client/src/components/PostComments.css
@@ -1,7 +1,7 @@
 .post-comment-main-container {
   display: inline-flex;
   position: relative;
-  padding: 15px;
+  padding: 10px;
   width: 100%;
   flex-wrap: wrap;
 }
@@ -10,12 +10,11 @@
   background-color: #f0f2f5;
   width: 400px;
   min-height: 50px;
-  margin-left: 8px;
+  margin: 0 0 12px 8px;
   border-radius: 15px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 8px 12px;
 }
 
 .username-container {
@@ -23,7 +22,7 @@
 }
 
 .comment-text {
-  padding: 10px 8px;
+  padding: 10px;
   margin: 0;
   text-align: left;
 }
